--- a/Software/PresentationLayer/FrmMain.resx
+++ b/Software/PresentationLayer/FrmMain.resx
@@ -121,106 +121,6 @@
   <data name="btnDocuments.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        6gAAAOoB+Ss1JgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAQXSURBVFhH7Zdf
-        bFNVHMf7IDqDgCYmRiWGBxNfjAlqFBMMgkpIfPKFZMtMVPwzRcD9kQXQrdtCyBhxqHMNI5tBh2xlfxj/
-        NmRZYevYRqcMOsaGg41O2u5fR9vL2p5726/nnLnb3p5e+rb4sIdPcnrvt7/fZ7337JxjMBw6tGS58XjT
-        cmOdQkEsy/Jq8UhOBR7OLI+k7KyqCudvKAnnbQhSoOG79ZAz14B88TLkHa91K7aCLWFboY8CLQVQOnMg
-        t30O+cJXLliMKYZlRvPa+MaxLN1djSWZP+PJ7DKFNosIzf9D2b2OCqzmhC/lTYvN5ymAbKECbZ8hbM3O
-        MKwwHt/IGj1eUI+GAResDo+GbU02LrAy56DabLazAdKdIQ2zHfVRAeu3vFlwpBmS16ll6iYVyOACsjVr
-        lyrwzL4meAkEzPYxQcA/6RJy/gmXICBNDQo5BunYoS9Q3nMLqTXdSKvths3p1RVouuHmOQYb6wmwGqwW
-        y5l6bicXYF/4/doYauz/wCnJugJDngDPMdhYT4DVYLVYrtflSy4wGQjD4Qtx2Gc9AU8ooubY+EGPYD7H
-        aicV2PWHHS8ebOZcHJ3WFaj8c1TNsbGeAKsxn2O1kwrEs+AvYTyLAosCCybw1N4TuBcSw8euOUSB8btC
-        jl0TBCZvCDkGad8uCjA+qruM3HN2DWt+OisIkCO5CLRUaAj98o0gQPrpvTutGkLDjepqKAgk4rE9RwWB
-        RCh73hIE9FgUWBT4fwusoLz0QwueKz6ZVEAp2cxJJqBcKYF8tSy5wDuVFzDqnduIMJr/nsDTRWZBQC5N
-        hzQyoOakkesgB1IFAeWv/Zp/Rn5pBmSgKrHAqv2n4L6vwBNQcKrjEmyDw/xLZrqd0gjkvw3JcZPfa+vt
-        4/DidGdMvnxFI3B//Cq/x2qdtnbx2r5ZCcSaJQp8YO7h4XJzHdampmJdejoGHE54ghE8mm1SBeQfP+S5
-        s12XeY7RTMfsWij//ahAbxF8QYLrtAarxXKm2jqeC9grRIEt9TZ+8/tfq3n4zbQ09A2PYobu95bmRAVI
-        2Sc812BpVwUa6ZhdCxZtjhHYC29IwRVag9ViudLfjs4J9NPHEC/wwoEzmA6G4fYFUNl4Uv2rzt+a0D4C
-        47t84Zmh2WMt51FzrpWP/e4xkK2vah6BNDXEa7Bfi9Ucp7V9wRBI587EL2G6uRuTs3M7V0af24/n9zUI
-        LyExZWiWZL4Ul33Km8cKKH2lkO5FV05fIAAyVPvgafgs3Re8d6Qdb5ha8QQ9rulOw8JNIIe3c9hYdxrS
-        d4H0HwYZrKazophf0wgs/OE0KsAPpwaj5SHa6ARF/3ieZYqk5FZVhvPXF9NmiY/nX79Op+FqdjzvUmyF
-        H9NG3vjGscdz5eI2JyzGlH8B+unkDumDytcAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        6gAAAOoB+Ss1JgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAALqSURBVFhHzZdf
-        SFNRHMdHbLv7c3d3ky2wpHoIotcJalSgrFG5siCkhx4L7C8Mg9Yw59B1vZXbnPliWqOHEHrorZeCfHB/
-        VaoHH1JDF/0hxPAlWin669yj97bu7v7cbQ1/8GH3sO33/XDOufdwFTlqL2IMsYx4hdiFqGi9RlzYuFRc
-        RrzYuPzPVW3Wzxr06lWVctvq2oKb3VNDf9VqlKl8UCTxFv3dmQU7orAidapVeHcRaEoDkOwsGAOpBXen
-        WxKCIH5uts9fYoGOa4fxdXd7Y0ZoOkZKD0uLS5IggV+oNTcTzTgkV4kFths1sPjmBpiqdBmh6eQSMFAk
-        XO9uBTWhyj8TYoEjdbvxJz+efnkJWKcV87DXLikQ8AfAd98njEee+WDqRwgIjSq1GZO9eIEqWgtr87dx
-        85UPHWDenIGZsSuCQKivRVJg8MEgBPuDf8dPGPkCzU37INh1DFIzLrh7ywpnTxwQwqTItQSUkZQv8CXu
-        gNO2/VC9g8Th36bacdDzoVa8LzgOWmokBRrqG8BisZQmAAsdQvNCKPsMwNxNGGLswnpLMcyelBToD/RD
-        wBcoUWD6Kg6QCuZ5dO+UpMBAcABLlCbA8d4hBOSj/EvAg2YC5px590T5N6FMaEorBIqRJbDTTM6iD5DL
-        0aZ6yXAOeTNAkl6X0wWfPn6WbFYMRQtEw1F8nE7EJ3Aj7hkvPmqzwf22ZIHIeAQ3S8QSGwLo3hYHZaP4
-        58BWWoLQ4xDQNA2jT0dxo1pLLR4XQvG34VaagVgkhtdzMjGJG3FnvHitedLPfzFFC4THw7h5PBrHjfx9
-        /oxgHn7TJeeTwNxh/vmONOgrtwS9TC/YbDZgWRYYhgGz2QxnzlsrJ+Dp8oDX64X19XVoa2uDxuN1EP0+
-        XFmBnp6ejPCKCphMJrC1HIL48ogQXrAAKrtOp1tB/DbSBpALt+G4NReHyxHApVQrPQ7mXEaTUpAlgMqO
-        3mRShFZdNkijjnuBTSuF4g9yE2Xx8n2HYwAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        6QAAAOkBVJIUSwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAALqSURBVFhHzZdf
-        SFNRHMdHbLv7c3d3ky2wpHoIotcJalSgrFG5siCkhx4L7C8Mg9Yw59B1vZXbnPliWqOHEHrorZeCfHB/
-        VaoHH1JDF/0hxPAlWin669yj97bu7v7cbQ1/8GH3sO33/XDOufdwFTlqL2IMsYx4hdiFqGi9RlzYuFRc
-        RrzYuPzPVW3Wzxr06lWVctvq2oKb3VNDf9VqlKl8UCTxFv3dmQU7orAidapVeHcRaEoDkOwsGAOpBXen
-        WxKCIH5uts9fYoGOa4fxdXd7Y0ZoOkZKD0uLS5IggV+oNTcTzTgkV4kFths1sPjmBpiqdBmh6eQSMFAk
-        XO9uBTWhyj8TYoEjdbvxJz+efnkJWKcV87DXLikQ8AfAd98njEee+WDqRwgIjSq1GZO9eIEqWgtr87dx
-        85UPHWDenIGZsSuCQKivRVJg8MEgBPuDf8dPGPkCzU37INh1DFIzLrh7ywpnTxwQwqTItQSUkZQv8CXu
-        gNO2/VC9g8Th36bacdDzoVa8LzgOWmokBRrqG8BisZQmAAsdQvNCKPsMwNxNGGLswnpLMcyelBToD/RD
-        wBcoUWD6Kg6QCuZ5dO+UpMBAcABLlCbA8d4hBOSj/EvAg2YC5px590T5N6FMaEorBIqRJbDTTM6iD5DL
-        0aZ6yXAOeTNAkl6X0wWfPn6WbFYMRQtEw1F8nE7EJ3Aj7hkvPmqzwf22ZIHIeAQ3S8QSGwLo3hYHZaP4
-        58BWWoLQ4xDQNA2jT0dxo1pLLR4XQvG34VaagVgkhtdzMjGJG3FnvHitedLPfzFFC4THw7h5PBrHjfx9
-        /oxgHn7TJeeTwNxh/vmONOgrtwS9TC/YbDZgWRYYhgGz2QxnzlsrJ+Dp8oDX64X19XVoa2uDxuN1EP0+
-        XFmBnp6ejPCKCphMJrC1HIL48ogQXrAAKrtOp1tB/DbSBpALt+G4NReHyxHApVQrPQ7mXEaTUpAlgMqO
-        3mRShFZdNkijjnuBTSuF4g9yE2Xx8n2HYwAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="button5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        6QAAAOkBVJIUSwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAALqSURBVFhHzZdf
-        SFNRHMdHbLv7c3d3ky2wpHoIotcJalSgrFG5siCkhx4L7C8Mg9Yw59B1vZXbnPliWqOHEHrorZeCfHB/
-        VaoHH1JDF/0hxPAlWin669yj97bu7v7cbQ1/8GH3sO33/XDOufdwFTlqL2IMsYx4hdiFqGi9RlzYuFRc
-        RrzYuPzPVW3Wzxr06lWVctvq2oKb3VNDf9VqlKl8UCTxFv3dmQU7orAidapVeHcRaEoDkOwsGAOpBXen
-        WxKCIH5uts9fYoGOa4fxdXd7Y0ZoOkZKD0uLS5IggV+oNTcTzTgkV4kFths1sPjmBpiqdBmh6eQSMFAk
-        XO9uBTWhyj8TYoEjdbvxJz+efnkJWKcV87DXLikQ8AfAd98njEee+WDqRwgIjSq1GZO9eIEqWgtr87dx
-        85UPHWDenIGZsSuCQKivRVJg8MEgBPuDf8dPGPkCzU37INh1DFIzLrh7ywpnTxwQwqTItQSUkZQv8CXu
-        gNO2/VC9g8Th36bacdDzoVa8LzgOWmokBRrqG8BisZQmAAsdQvNCKPsMwNxNGGLswnpLMcyelBToD/RD
-        wBcoUWD6Kg6QCuZ5dO+UpMBAcABLlCbA8d4hBOSj/EvAg2YC5px590T5N6FMaEorBIqRJbDTTM6iD5DL
-        0aZ6yXAOeTNAkl6X0wWfPn6WbFYMRQtEw1F8nE7EJ3Aj7hkvPmqzwf22ZIHIeAQ3S8QSGwLo3hYHZaP4
-        58BWWoLQ4xDQNA2jT0dxo1pLLR4XQvG34VaagVgkhtdzMjGJG3FnvHitedLPfzFFC4THw7h5PBrHjfx9
-        /oxgHn7TJeeTwNxh/vmONOgrtwS9TC/YbDZgWRYYhgGz2QxnzlsrJ+Dp8oDX64X19XVoa2uDxuN1EP0+
-        XFmBnp6ejPCKCphMJrC1HIL48ogQXrAAKrtOp1tB/DbSBpALt+G4NReHyxHApVQrPQ7mXEaTUpAlgMqO
-        3mRShFZdNkijjnuBTSuF4g9yE2Xx8n2HYwAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        6QAAAOkBVJIUSwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAALqSURBVFhHzZdf
-        SFNRHMdHbLv7c3d3ky2wpHoIotcJalSgrFG5siCkhx4L7C8Mg9Yw59B1vZXbnPliWqOHEHrorZeCfHB/
-        VaoHH1JDF/0hxPAlWin669yj97bu7v7cbQ1/8GH3sO33/XDOufdwFTlqL2IMsYx4hdiFqGi9RlzYuFRc
-        RrzYuPzPVW3Wzxr06lWVctvq2oKb3VNDf9VqlKl8UCTxFv3dmQU7orAidapVeHcRaEoDkOwsGAOpBXen
-        WxKCIH5uts9fYoGOa4fxdXd7Y0ZoOkZKD0uLS5IggV+oNTcTzTgkV4kFths1sPjmBpiqdBmh6eQSMFAk
-        XO9uBTWhyj8TYoEjdbvxJz+efnkJWKcV87DXLikQ8AfAd98njEee+WDqRwgIjSq1GZO9eIEqWgtr87dx
-        85UPHWDenIGZsSuCQKivRVJg8MEgBPuDf8dPGPkCzU37INh1DFIzLrh7ywpnTxwQwqTItQSUkZQv8CXu
-        gNO2/VC9g8Th36bacdDzoVa8LzgOWmokBRrqG8BisZQmAAsdQvNCKPsMwNxNGGLswnpLMcyelBToD/RD
-        wBcoUWD6Kg6QCuZ5dO+UpMBAcABLlCbA8d4hBOSj/EvAg2YC5px590T5N6FMaEorBIqRJbDTTM6iD5DL
-        0aZ6yXAOeTNAkl6X0wWfPn6WbFYMRQtEw1F8nE7EJ3Aj7hkvPmqzwf22ZIHIeAQ3S8QSGwLo3hYHZaP4
-        58BWWoLQ4xDQNA2jT0dxo1pLLR4XQvG34VaagVgkhtdzMjGJG3FnvHitedLPfzFFC4THw7h5PBrHjfx9
-        /oxgHn7TJeeTwNxh/vmONOgrtwS9TC/YbDZgWRYYhgGz2QxnzlsrJ+Dp8oDX64X19XVoa2uDxuN1EP0+
-        XFmBnp6ejPCKCphMJrC1HIL48ogQXrAAKrtOp1tB/DbSBpALt+G4NReHyxHApVQrPQ7mXEaTUpAlgMqO
-        3mRShFZdNkijjnuBTSuF4g9yE2Xx8n2HYwAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
         6QAAAOkBVJIUSwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAQXSURBVFhH7Zdf
         bFNVHMf7IDqDgCYmRiWGBxNfjAlqFBMMgkpIfPKFZMtMVPwzRcD9kQXQrdtCyBhxqHMNI5tBh2xlfxj/
         NmRZYevYRqcMOsaGg41O2u5fR9vL2p5726/nnLnb3p5e+rb4sIdPcnrvt7/fZ7337JxjMBw6tGS58XjT
@@ -242,10 +142,105 @@
         H9NG3vjGscdz5eI2JyzGlH8B+unkDumDytcAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="btnRecipes.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        6QAAAOkBVJIUSwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAALqSURBVFhHzZdf
+        SFNRHMdHbLv7c3d3ky2wpHoIotcJalSgrFG5siCkhx4L7C8Mg9Yw59B1vZXbnPliWqOHEHrorZeCfHB/
+        VaoHH1JDF/0hxPAlWin669yj97bu7v7cbQ1/8GH3sO33/XDOufdwFTlqL2IMsYx4hdiFqGi9RlzYuFRc
+        RrzYuPzPVW3Wzxr06lWVctvq2oKb3VNDf9VqlKl8UCTxFv3dmQU7orAidapVeHcRaEoDkOwsGAOpBXen
+        WxKCIH5uts9fYoGOa4fxdXd7Y0ZoOkZKD0uLS5IggV+oNTcTzTgkV4kFths1sPjmBpiqdBmh6eQSMFAk
+        XO9uBTWhyj8TYoEjdbvxJz+efnkJWKcV87DXLikQ8AfAd98njEee+WDqRwgIjSq1GZO9eIEqWgtr87dx
+        85UPHWDenIGZsSuCQKivRVJg8MEgBPuDf8dPGPkCzU37INh1DFIzLrh7ywpnTxwQwqTItQSUkZQv8CXu
+        gNO2/VC9g8Th36bacdDzoVa8LzgOWmokBRrqG8BisZQmAAsdQvNCKPsMwNxNGGLswnpLMcyelBToD/RD
+        wBcoUWD6Kg6QCuZ5dO+UpMBAcABLlCbA8d4hBOSj/EvAg2YC5px590T5N6FMaEorBIqRJbDTTM6iD5DL
+        0aZ6yXAOeTNAkl6X0wWfPn6WbFYMRQtEw1F8nE7EJ3Aj7hkvPmqzwf22ZIHIeAQ3S8QSGwLo3hYHZaP4
+        58BWWoLQ4xDQNA2jT0dxo1pLLR4XQvG34VaagVgkhtdzMjGJG3FnvHitedLPfzFFC4THw7h5PBrHjfx9
+        /oxgHn7TJeeTwNxh/vmONOgrtwS9TC/YbDZgWRYYhgGz2QxnzlsrJ+Dp8oDX64X19XVoa2uDxuN1EP0+
+        XFmBnp6ejPCKCphMJrC1HIL48ogQXrAAKrtOp1tB/DbSBpALt+G4NReHyxHApVQrPQ7mXEaTUpAlgMqO
+        3mRShFZdNkijjnuBTSuF4g9yE2Xx8n2HYwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        6AAAAOgBhtX2rwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAALqSURBVFhHzZdf
+        SFNRHMdHbLv7c3d3ky2wpHoIotcJalSgrFG5siCkhx4L7C8Mg9Yw59B1vZXbnPliWqOHEHrorZeCfHB/
+        VaoHH1JDF/0hxPAlWin669yj97bu7v7cbQ1/8GH3sO33/XDOufdwFTlqL2IMsYx4hdiFqGi9RlzYuFRc
+        RrzYuPzPVW3Wzxr06lWVctvq2oKb3VNDf9VqlKl8UCTxFv3dmQU7orAidapVeHcRaEoDkOwsGAOpBXen
+        WxKCIH5uts9fYoGOa4fxdXd7Y0ZoOkZKD0uLS5IggV+oNTcTzTgkV4kFths1sPjmBpiqdBmh6eQSMFAk
+        XO9uBTWhyj8TYoEjdbvxJz+efnkJWKcV87DXLikQ8AfAd98njEee+WDqRwgIjSq1GZO9eIEqWgtr87dx
+        85UPHWDenIGZsSuCQKivRVJg8MEgBPuDf8dPGPkCzU37INh1DFIzLrh7ywpnTxwQwqTItQSUkZQv8CXu
+        gNO2/VC9g8Th36bacdDzoVa8LzgOWmokBRrqG8BisZQmAAsdQvNCKPsMwNxNGGLswnpLMcyelBToD/RD
+        wBcoUWD6Kg6QCuZ5dO+UpMBAcABLlCbA8d4hBOSj/EvAg2YC5px590T5N6FMaEorBIqRJbDTTM6iD5DL
+        0aZ6yXAOeTNAkl6X0wWfPn6WbFYMRQtEw1F8nE7EJ3Aj7hkvPmqzwf22ZIHIeAQ3S8QSGwLo3hYHZaP4
+        58BWWoLQ4xDQNA2jT0dxo1pLLR4XQvG34VaagVgkhtdzMjGJG3FnvHitedLPfzFFC4THw7h5PBrHjfx9
+        /oxgHn7TJeeTwNxh/vmONOgrtwS9TC/YbDZgWRYYhgGz2QxnzlsrJ+Dp8oDX64X19XVoa2uDxuN1EP0+
+        XFmBnp6ejPCKCphMJrC1HIL48ogQXrAAKrtOp1tB/DbSBpALt+G4NReHyxHApVQrPQ7mXEaTUpAlgMqO
+        3mRShFZdNkijjnuBTSuF4g9yE2Xx8n2HYwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        6AAAAOgBhtX2rwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAALqSURBVFhHzZdf
+        SFNRHMdHbLv7c3d3ky2wpHoIotcJalSgrFG5siCkhx4L7C8Mg9Yw59B1vZXbnPliWqOHEHrorZeCfHB/
+        VaoHH1JDF/0hxPAlWin669yj97bu7v7cbQ1/8GH3sO33/XDOufdwFTlqL2IMsYx4hdiFqGi9RlzYuFRc
+        RrzYuPzPVW3Wzxr06lWVctvq2oKb3VNDf9VqlKl8UCTxFv3dmQU7orAidapVeHcRaEoDkOwsGAOpBXen
+        WxKCIH5uts9fYoGOa4fxdXd7Y0ZoOkZKD0uLS5IggV+oNTcTzTgkV4kFths1sPjmBpiqdBmh6eQSMFAk
+        XO9uBTWhyj8TYoEjdbvxJz+efnkJWKcV87DXLikQ8AfAd98njEee+WDqRwgIjSq1GZO9eIEqWgtr87dx
+        85UPHWDenIGZsSuCQKivRVJg8MEgBPuDf8dPGPkCzU37INh1DFIzLrh7ywpnTxwQwqTItQSUkZQv8CXu
+        gNO2/VC9g8Th36bacdDzoVa8LzgOWmokBRrqG8BisZQmAAsdQvNCKPsMwNxNGGLswnpLMcyelBToD/RD
+        wBcoUWD6Kg6QCuZ5dO+UpMBAcABLlCbA8d4hBOSj/EvAg2YC5px590T5N6FMaEorBIqRJbDTTM6iD5DL
+        0aZ6yXAOeTNAkl6X0wWfPn6WbFYMRQtEw1F8nE7EJ3Aj7hkvPmqzwf22ZIHIeAQ3S8QSGwLo3hYHZaP4
+        58BWWoLQ4xDQNA2jT0dxo1pLLR4XQvG34VaagVgkhtdzMjGJG3FnvHitedLPfzFFC4THw7h5PBrHjfx9
+        /oxgHn7TJeeTwNxh/vmONOgrtwS9TC/YbDZgWRYYhgGz2QxnzlsrJ+Dp8oDX64X19XVoa2uDxuN1EP0+
+        XFmBnp6ejPCKCphMJrC1HIL48ogQXrAAKrtOp1tB/DbSBpALt+G4NReHyxHApVQrPQ7mXEaTUpAlgMqO
+        3mRShFZdNkijjnuBTSuF4g9yE2Xx8n2HYwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        6AAAAOgBhtX2rwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAALqSURBVFhHzZdf
+        SFNRHMdHbLv7c3d3ky2wpHoIotcJalSgrFG5siCkhx4L7C8Mg9Yw59B1vZXbnPliWqOHEHrorZeCfHB/
+        VaoHH1JDF/0hxPAlWin669yj97bu7v7cbQ1/8GH3sO33/XDOufdwFTlqL2IMsYx4hdiFqGi9RlzYuFRc
+        RrzYuPzPVW3Wzxr06lWVctvq2oKb3VNDf9VqlKl8UCTxFv3dmQU7orAidapVeHcRaEoDkOwsGAOpBXen
+        WxKCIH5uts9fYoGOa4fxdXd7Y0ZoOkZKD0uLS5IggV+oNTcTzTgkV4kFths1sPjmBpiqdBmh6eQSMFAk
+        XO9uBTWhyj8TYoEjdbvxJz+efnkJWKcV87DXLikQ8AfAd98njEee+WDqRwgIjSq1GZO9eIEqWgtr87dx
+        85UPHWDenIGZsSuCQKivRVJg8MEgBPuDf8dPGPkCzU37INh1DFIzLrh7ywpnTxwQwqTItQSUkZQv8CXu
+        gNO2/VC9g8Th36bacdDzoVa8LzgOWmokBRrqG8BisZQmAAsdQvNCKPsMwNxNGGLswnpLMcyelBToD/RD
+        wBcoUWD6Kg6QCuZ5dO+UpMBAcABLlCbA8d4hBOSj/EvAg2YC5px590T5N6FMaEorBIqRJbDTTM6iD5DL
+        0aZ6yXAOeTNAkl6X0wWfPn6WbFYMRQtEw1F8nE7EJ3Aj7hkvPmqzwf22ZIHIeAQ3S8QSGwLo3hYHZaP4
+        58BWWoLQ4xDQNA2jT0dxo1pLLR4XQvG34VaagVgkhtdzMjGJG3FnvHitedLPfzFFC4THw7h5PBrHjfx9
+        /oxgHn7TJeeTwNxh/vmONOgrtwS9TC/YbDZgWRYYhgGz2QxnzlsrJ+Dp8oDX64X19XVoa2uDxuN1EP0+
+        XFmBnp6ejPCKCphMJrC1HIL48ogQXrAAKrtOp1tB/DbSBpALt+G4NReHyxHApVQrPQ7mXEaTUpAlgMqO
+        3mRShFZdNkijjnuBTSuF4g9yE2Xx8n2HYwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAOsAAADrASts18IAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAC6UlEQVRYR2MgATACsQoQh3Gzs/bLi/JflhHkmQyWoQFgBmJtII7h42CfLsTDdZGDleWrnAj/e19T
+        jY9NEc7/lud4/1cV5/8NVOMJxEpALArEICAGxCC+BJhHBAD5zACIkwW4ORYA8VV2oGWK4oKvAy203rVH
+        u/3bXBXz//bUwv8PZ5bA8f0Jaf8dNKV/S0tKflJRUnzn7eZy7//756tcHe0eqqsofxQXFf0lIyVRDrYB
+        H+DlZN+vLCn0PsbO4GtPvMf/HbXx/+9OL0KxDBsGO0BD+s/hbRv//3/3HAMfXb/yv5qS4nWoNbgB0Lc/
+        sFlACBNywMlNa0EOuAm1BjcAOuA7NgsI4VEHjDpgKDmAiZmZORVIG4ItRAd0cIClpKz8F35BoU/MbGyR
+        EFuRAC8H22dsFhDC6A44d2D3/93AwgeGpzTX/5eSEHsMtKLUwsXj3boLd/9Lyil84uLhaYDYDAWHW5Mn
+        YLMAGz7Tnfn/YHMKmI3sgGM7N/+XlpX77xYQjMD+Qf/tvXy/Wbp6vpu4ZvufE+///d/94N1/XTPLTzz8
+        /CuAVrOCHRBtq7cH3SJceFKy938ZYf7/MzP8URywadnC/z7h0f9BlhDCR179/O8RFvOVl1/gFNB6AZLT
+        QDewvkh2NibbASB8DIgjKpr+CopL3qe7A468+/d/8fO//wMrWv6R7ICJSd7/pYX5/s/CEgXOYTH/17/+
+        i4pf/f2/CYi3ANnHgZYfBFo+9/GP/w6xaf+EJWWukBwFoER4qAUzEYJygJiM3H9z3xAUbOoT/NfEO+hP
+        wfLt/zcDHTHp5pv/GtaOf4UlpDcCLYckQmqVA+cP7sGZDU28An+3nrj9X1JV4ze/qHgb2GIYoJYD0DFy
+        QSShrPZHQEziFwc3dzTEViRABwcwATGoKNYH2YcB6OAA/GDUAaMOADpgYJvlwI7JvgHtmAABVbpmyBjW
+        NZOSkCgF20AGILJzKoDcOUXH4kBMVUCD7jkDAwBK1u6F98Y0rwAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="btnData.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        6gAAAOoB+Ss1JgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAJKSURBVFhH7dZd
+        6QAAAOkBVJIUSwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAJKSURBVFhH7dZd
         SFNhHAbww7Z0ZzubILSc2XQ1N8GFiYJjuqw5YtFyMtsyF2JJW4VIH6Ko1IVhF9FFVFBBoy6Cgc27mBcj
         KMLoYnfRRbdhF4voJrKPbe/T+waOBe+hL7Sg84cfnJ3n4n1g/wOvoIwydPTUIBX7gS6KzQDFy38VO1Mn
         WKyNr51OH7rc0ZImhwcOex0mRneW3E8MkmLuIpmb3kPK3/+W425EfDY4HZZlQSvqyezUI1yYelwyEJrF
@@ -261,7 +256,7 @@
   <data name="button8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
-        HwAAAR8BcgrJ9wAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAANMSURBVFhH7ZfL
+        HgAAAR4BoE0rEwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAANMSURBVFhH7ZfL
         TxNRFIf7f5BIDC5Y4ILEsJAdBRZGacWVJMYYiS6AFtxiy/gA8YUwUKmEiCGUjtOWBqu8oqUC8moMURJa
         wIISo1KKCxITHg3Xc4zT3E4PpSG6Y/Glt2fuPd8vM3emUw1j7EAEHMLJeafgRXBMzUkFspiMoFM4Me8Q
         +kHM4oAaHqPWJIMsUgTkm8dB5E4QJ+LGuVQPCrLI8/1tx6nIlHNl3e9mXwZESkixC0hAJtWThywiP7zP
@@ -304,7 +299,7 @@
   <data name="button10.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        6gAAAOoB+Ss1JgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAM3SURBVFhHxZTL
+        6QAAAOkBVJIUSwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAM3SURBVFhHxZTL
         TxNRFMZh495/Qf8L3Kob42OF4bGSgPJUFrSoGwSFklgwMQHBkLhQgwkPF7ShgUjxUWmx0iKkbaDQWip9
         ANENtD5yvN90pp2ZzJQpHcJJvuTOued85ze9d1qiJaij41SqqfPWfmOXUYtQix6+vfg4aH5QddDUSQWq
         km8vPtgb1SkMoPTAK05Ke+jh24sPRYC2XhICa/n+sQL8HrXQv7UQP564NXLimmMF+Ote5UfnAjlxjS4A
